---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-01-13
  Features:
    - Draw filters on asteroid collectors

  Changes:
    - Attempted to get all alt-alt-mode icon scales and positions as close as possible to the vanilla alt mode counterpart
    - Entities that are not selectable will not show any icons
    - Cars and tanks now show their fuel instead of cargo
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2025-01-12
  Features:
    - Draw modules on labs
    - Draw recipe blocked symbol on recipes that are not unlocked yet

  Changes:
    - Added "car" to the default blacklisted entity types
    - Draw quality icons on filtered and enemy entities
    - Better visualisation on pipes (Thanks to O5MO)

  Bugfixes:
    - Item requests are now shown when selecting entities individually
    - Stopped the flashing of icons on Fulgora
    - Stopped spidertron from dancing by removing collision_box on invisible entities

---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2024-12-31
  Features:
    - Added a setting to filter out any entity type.

  Changes:
    - Removed individual entity settings (robots, poles, accumulators, heat pipes)

  Bugfixes:
    - Fix crash when item-request-proxies had no target

---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2024-12-31
  Features:
    - Added settings to toggle robots, poles, accumulators and heat pipes

  Bugfixes:
    - Added more robust checks to see if sprites can be drawn

---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2024-12-31

  Bugfixes:
    - Fixed inconsistencies between QualityID and LuaQualityPrototype types