@@ -1,6 +1,6 @@
 {
 	"name": "alt-alt-mode",
-	"version": "0.2.5",
+	"version": "0.3.0",
 	"factorio_version": "2.0",
 	"title": "Alternative Alt Mode",
 	"author": "LeonSkills",
