@@ -60,7 +60,7 @@ util.get_order = function(str, proto_type)
     proto_type = (proto_type == "virtual") and "virtual_signal" or proto_type
     local prototype = prototypes[proto_type][str]
     if not prototype then
-      util.print{proto_type, str}
+      return "zzz"
     end
     return prototype.group.order .. "-" .. prototype.subgroup.order .. "-" .. prototype.order
   end
@@ -84,42 +84,6 @@ util.sort_inventory = function(inventory_contents)
     end
     return s1.count > s2.count
   end)
-end
-
-util.fill_grid_with_largest_square = function(width, height, num_items)
-  if width <= 0 or height <= 0 then
-    return 0, 0, 1
-  end
-  width = width * 0.9
-  height = height * 0.9
-  -- Compute number of rows and columns, and cell size
-  local ratio = width / height
-  local ideal_num_columns = math.sqrt(num_items * ratio)
-  local ideal_num_rows = num_items / ideal_num_columns
-
-  local num_rows_1 = math.ceil(ideal_num_rows)
-  local num_columns_1 = math.ceil(num_items / num_rows_1)
-  while (num_rows_1 * ratio < num_columns_1) do
-    num_rows_1 = num_rows_1 + 1;
-    num_columns_1 = math.ceil(num_items / num_rows_1)
-  end
-  local cell_size_1 = height / num_rows_1
-
-  -- Find best option filling the whole width
-  local num_columns_2 = math.ceil(ideal_num_columns)
-  local num_rows_2 = math.ceil(num_items / num_columns_2)
-  while (num_columns_2 < num_rows_2 * ratio) do
-    num_columns_2 = num_columns_2 + 1
-    num_rows_2 = math.ceil(num_items / num_columns_2)
-  end
-  local cell_size_2 = width / num_columns_2
-
-  -- Find the best values
-  if cell_size_1 <= cell_size_2 then
-    return num_columns_2, num_rows_2, cell_size_2
-  else
-    return num_columns_1, num_rows_1, cell_size_1
-  end
 end
 
 util.number_length = function(num)
@@ -147,6 +111,9 @@ util.localise_number = function(num)
   if num == 0 then return "0" end
   local negative = num < 0 and "-" or ""
   num = math.abs(num)
+  if num < 1 then
+    return {"", negative, string.sub(num, 1, 4)}
+  end
   local prefix_index = math.floor(math.log10(num) / 3)
   local localised_prefix = ""
   if prefix_index > #si_prefixes then
